--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-﻿fastapi
-uvicorn
-python-multipart
-pypdf2
-langchain
-openai
-chromadb
-pydantic
-tiktoken
-python-dotenv
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+pypdf2==3.0.1
+langchain==0.0.340
+openai==0.28.1
+chromadb==0.4.18
+pydantic==2.5.0
+tiktoken==0.5.1
+python-dotenv==1.0.0
