--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.109.0
+uvicorn==0.27.0
 python-multipart==0.0.6
 pypdf2==3.0.1
-langchain==0.0.340
-openai==0.28.1
-chromadb==0.4.18
-pydantic==2.5.0
-tiktoken==0.5.1
+langchain==0.1.0
+langchain-openai==0.0.2
+openai==1.6.1
+chromadb==0.4.22
+pydantic==2.5.3
+tiktoken==0.5.2
 python-dotenv==1.0.0
