--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-python-multipart==0.0.6
-pypdf2==3.0.1
-langchain==0.0.200
-openai==0.27.8
-chromadb==0.3.26
-pydantic==1.10.12
-tiktoken==0.4.0
-python-dotenv==1.0.0
-numpy==1.24.3
+fastapi
+uvicorn[standard]
+python-multipart
+pypdf2
+python-dotenv
